[gd_scene format=3 uid="uid://c645kldb4mfr3"]

[ext_resource type="Script" uid="uid://dud3351rov223" path="res://scenes/arcade/enemies/enemy.gd" id="1_0fxmb"]
[ext_resource type="Texture2D" uid="uid://bpir7mn3je2hj" path="res://assets/enemy3.png" id="2_0fxmb"]
[ext_resource type="AudioStream" uid="uid://30n5ehy3il2a" path="res://assets/sounds/8-bit Sound Library/Shoot_01.wav" id="3_qv8ip"]
[ext_resource type="AudioStream" uid="uid://ck3bxuak0ycbf" path="res://assets/sounds/8-bit Sound Library/Explosion_00.wav" id="4_t4c1f"]
[ext_resource type="AudioStream" uid="uid://ctfkha5v65008" path="res://assets/sounds/8-bit Sound Library/Hit_01.wav" id="5_ha176"]
[ext_resource type="PackedScene" uid="uid://bkgov81stuqku" path="res://scenes/arcade/muzzle_flash/muzzle_flash.tscn" id="6_iba51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(63.66667, 10.333334)

[node name="Enemy" type="Area2D" unique_id=579912282]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_0fxmb")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=606885093]
self_modulate = Color(1.8247963, 1.8247963, 1.8247963, 1)
position = Vector2(0, 6)
texture = ExtResource("2_0fxmb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=149711576]
position = Vector2(0.16666731, -10.166667)
shape = SubResource("RectangleShape2D_md0e3")

[node name="ReviveTimer" type="Timer" parent="." unique_id=200176704]
one_shot = true

[node name="ShootTimer" type="Timer" parent="." unique_id=1470468937]
one_shot = true

[node name="ShootPlayer" type="AudioStreamPlayer2D" parent="." unique_id=151001254]
stream = ExtResource("3_qv8ip")
bus = &"SoundFx"

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="." unique_id=976021530]
stream = ExtResource("4_t4c1f")
bus = &"SoundFx"

[node name="RevivePlayer" type="AudioStreamPlayer2D" parent="." unique_id=386878944]
stream = ExtResource("5_ha176")
bus = &"SoundFx"

[node name="MuzzleFlash" parent="." unique_id=2020624600 instance=ExtResource("6_iba51")]
position = Vector2(0, -30)
flash_color = Color(0.9764706, 0.34117648, 0.21960784, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_revive_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
